# frs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  changes.md  frs_api.cpp  frs_api.h  main.cpp  readme.md  scheduler.cpp  scheduler.h  singleton.cpp  singleton.h  sql_pool.cpp  sql_pool.h  tasks.cpp  tasks.h
apidoc/: apidoc.json  create_apidoc  create_apidoc_sg  header.md
contrib/: CMakeLists.txt
contrib/abseil-cpp-cmake/: CMakeLists.txt
contrib/concurrencpp-cmake/: CMakeLists.txt
contrib/cpr-cmake/: CMakeLists.txt
contrib/crow-cmake/: CMakeLists.txt
contrib/mysql-connector-cpp-cmake/: CMakeLists.txt
docker/: Dockerfile  build_frs.sh  docker-compose-cpu.yml  docker-compose-gpu.yml  frs.config  prepare_and_build_example.sh  prepare_config.sh  readme.md  setup_nvidia_container_toolkit.sh  setup_nvidia_drivers.sh  tensorrt_plans.sh
mysql/: 01_structure.sql  02_default_data.sql  changes_v1.0.0_to_v1.1.0.sql  changes_v1.1.0_to_v1.1.1.sql  trg_before_delete_vstream.sql  trg_on_remove_link2.sql
opt/: run_frs  sample.config
opt/model_repository/arcface/: config.pbtxt
opt/model_repository/genet/: config.pbtxt
opt/model_repository/scrfd/: config.pbtxt
opt/model_repository_onnx/arcface/: config.pbtxt
opt/model_repository_onnx/genet/: config.pbtxt
opt/model_repository_onnx/scrfd/: config.pbtxt
opt/plan_source/: tensorrt.txt
opt/plan_source/arcface/: trt_exec.txt
opt/plan_source/genet/: trt_exec.txt
opt/tensorrt_plans/scrfd/: trtexec.txt
